etc/tests/fuzz/errors/attr/duplicate-returns-owned.nshape
shape attr-duplicate-returns-owned {
  family "compiler-errors/attr"
  generator "error"
  features ["error", "attr", "negative", "diagnostic"]
  template ny-compile-fail
  expect compile_fail

  expect_message "duplicate attribute '@returns_owned'"
  source ny <<'NY'
use std.core

@returns_owned
@returns_owned
fn f() { [1] }
print(f())
NY
}
